# sharpy

./: ._config.yml.un~  .codecov.yml  .coveragerc  .git-blame-ignore-revs  .github_changelog_generator  .gitignore  .gitmodules  .index.md.un~  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .version.json  .zenodo.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __main__.py  _config.yml  debug_failed_Asys.txt  env_backup.yml  environment.yml  environment_arm64.yml  index.html  index.md  install.sh  install_sharpy.md  license.txt  main.md  pypi_compatible_build.py  pyproject.toml  readthedocs.yml  requirements.readthedocs.txt  run_static_trim.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker_build.yaml  docker_build_test.yaml  pypi_build.yaml  pypi_build_test.yaml  pypi_test.yaml  readme.md  sharpy_no_test_needed.yaml  sharpy_tests.yaml
_posts/: .2018-10-31-welcome-to-jekyll.markdown.un~  2018-10-31-welcome-to-jekyll.markdown  2019-12-10-mass-stiffness-effect-on-damping.md
beam/: beamlib.py
cases/hangar/: horten_wing.py  richards_wing.py  swept_flying_wing.py
cases/models_generator/: gen_main.py  gen_utils.py
cases/templates/: Ttail.py  flying_wings.py  geo_utils.py  template_wt.py  template_wt_excel_type01.py
cpp/: makefile
cpp/include/: lib_biot.h  types.h
cpp/src/: cpp_interface.cpp  lib_biot.cpp
dev/: linsym_WncUc.py  sym_dev_dbiot.py  test_savingh5.py  trayectory.py
doc/source/: conf.py  index.rst
docs/: .buildinfo  Makefile  docignore.yml  docinclude.yml  genindex.html  index.html  objects.inv  py-modindex.html  requirements_rtd  search.html  searchindex.js
docs/JOSS/: Makefile  codemeta.json  generate.rb  paper.bib  paper.md
docs/_modules/: index.html
docs/content/: aero.html  generators.html  installation.html  postproc.html  presharpy.html  run_sharpy.html  solvers.html  structure.html  test_cases.html
docs/source/: conf.py  index.rst
lib/: CMakeLists.txt
presharpy/: h5utils.py  problemdata.py
presharpy/aerogrid/: aerogrid.py  gridutils.py
presharpy/beam/: beam.py  beamstructures.py  beamutils.py
presharpy/test/: generate_dynamic_data.py  generate_geradin_data.py  generate_lumped_mass_data.py  generate_multibeam_data.py  generate_test_data.py
presharpy/utils/: algebra.py  settings.py
requirements/: readthedocs.txt
runs/input/: directest-anothermodel.py  directest-anothermulti.py  directest-anothertimeaccuratemodel-diss.py  directest-anothertimeaccuratemodel-ga.py  directest-anothertimeaccuratemodel-lmrelax.py  directest-anothertimeaccuratemodel-spherical.py  directest-anothertimeaccuratemodel.py  directest-doublerot.py  directest-fix50.py  directest-fixingrotation.py  directest-yetanothermodel.py  directest-zerorot.py  directest.py  job  job-anothermodel  job-anothermulti  job-anothertimeaccuratemodel  job-anothertimeaccuratemodel-diss  job-anothertimeaccuratemodel-ga  job-anothertimeaccuratemodel-lmrelax  job-anothertimeaccuratemodel-spherical  job-doublerot  job-fix50  job-fixingrotation  job-yetanothermodel  job-zerorot
scripts/: xplaneUDP.py
scripts/optimiser/: optimiser.py  optimiser_gpyopt.py  optimiser_input.yaml
scripts/xplaneUDPout/: HALE_varDIe.acf  variables.yaml  xplaneUDP.py
sharpy/: __main__.py  sharpy_main.py  version.py
sharpy/aero/: __init__.py
sharpy/controllers/: __init__.py  bladepitchpid.py  (+3 more)
src/: analytical.py  assembly.py  gridmapping.py  interp.py  lib_dbiot.py  lib_ucdncdzeta.py  libalg.py  librom.py  libss.py  libuvlm.py  lin_aeroelastic.py  lingebm.py  linuvlm.py  multisurfaces.py  read.py  save.py  surface.py
test/: test_assembly.py  test_assembly_bkp.py  test_ders.py
tests/: __init__.py  runtests.py
utils/: environment.yml  environment_linux.yml  environment_linux_doc_development.yml  environment_macos.yml  environment_macos_arm64.yml  environment_minimal.yml  environment_new.yml  environment_travis.yml  get_libraries.sh  sharpy_environment.yml  sharpy_environment36.yml
(+1335 files in other folders)
